--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <br />
         <input type="text" id="num" name="num" />
         <br />
-        <button type="submit" id="count">Square</button>
+        <button type="submit" id="count">Squaring</button>
       </form>
       <div id="result"></div>
       <div id="error"></div>
